# DHOS

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  GNUmakefile  LICENSE  Makefile  README.md  Technical.txt
base/: limine.cfg
boot/: .gitignore  Makefile  include  src
boot/OVMFbin/: OVMF_VARS-pure-efi.fd
boot/gnu-efi/: Makefile
boot/gnu-efi/bootloader/: Makefile  main.c
boot/src/: main.c
commonlib/: bitmap.h  color.h  math.h  types.h
kernel/: CMakeLists.txt  buildall  kernel.c  kernel.h  kpanic.c  kpanic.h  kutil.c  kutil.h
kernel/arch/: io.h
kernel/asm/interrupts/: exceptions.asm
kernel/common/: log.c  log.h  string.c  string.h  va_list.c
kernel/drivers/comm/serial/: serial.c  serial.h
kernel/drivers/video/framebuffer/: fb.c  fb.h  font.h
kernel/include/common/: log.h  string.h
kernel/include/interrupts/: IDT.h
kernel/interrupts/: IDT.c  IDT.h  interrupts.c  interrupts.h
kernel/memory/: physicalmm.c  physicalmm.h
kernel/src/: kernel.c  kernel.h  limine.h
kernel/src/common/: log.c  log.h  string.c  string.h
kernel/src/interrupts/: IDT.c  IDT.h
toolchain/: install.sh
util/: build_cd_image.sh  build_disk_image.sh  run.sh
